--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "opendbc"]
   path = opendbc_repo
   url = https://github.com/HotIce0/opendbc
+  branch = develop-byd
 [submodule "msgq"]
   path = msgq_repo
   url = https://github.com/commaai/msgq
