--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,10 @@
 [submodule "panda"]
   path = panda
-  url = https://github.com/commaai/panda.git
+  url = https://github.com/HotIce0/panda.git
+  barnch = develop-byd
 [submodule "opendbc"]
   path = opendbc_repo
-  url = https://github.com/HotIce0/opendbc
+  url = https://github.com/HotIce0/opendbc.git
   branch = develop-byd
 [submodule "msgq"]
   path = msgq_repo
